--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "hng-stage-one_backend",
+  "name": "web_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "geoip-lite": "^1.4.10"
   }
